scss/common/_admin.scss
/* ... */
.embedding-secondary {
  @extend %card;
  @extend %card-block;

  margin-bottom: $spacer-lg;
  width: 100%;

  &:last-child {
    margin-bottom: 0;
  }

  > :last-child,
  > :last-child > pre:last-child {
    margin-bottom: 0;
  }

  h3 {
    margin: 0 0 $card-inner-spacer-y;
  }

  p {
    &.description {
      margin-bottom: $card-inner-spacer-y;
      max-width: 100%;
    }
  }

  .embed-setting {
    margin: 0 0 $card-inner-spacer-y;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.group-members-input > div:first-of-type {
  margin-bottom: $spacer-sm;
}

.groups-bulk {
  .admin-contents & {
    @extend %card;
    @extend %card-block;

    .control {
      margin-bottom: $card-inner-spacer-y;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }
}

.https-warning,
.query-create,
.query-edit,
.query-edit:not(.editing) .desc,
.query-list,
.query-params,
.query-results,
.query-run {
  margin: $spacer 0;
}

.inline-edit label {
  margin-right: $spacer-sm;
}

.ip-address-input {
  display: inline-block;
  width: auto;
}

.permalink-form {
  align-items: center;
  display: flex;
  margin-bottom: $spacer-sm;

  input[type='text'] {
    margin-right: $spacer-sm;
    margin-left: $spacer-sm;
  }

  .select2-container {
    text-align: right;
  }
}

.permalink-title {
  margin-bottom: 0;
  width: 100%;

  ~ div {
    width: 100%;

    input[type='text'] {
      @extend %text-field-box;

      margin-top: $spacer-sm;
    }
  }
}

.permalinks,
.screened-emails,
.screened-ip-addresses,
.screened-urls,
.staff-actions,
.web-hook-events {
  @extend %table;

  clear: both;
  display: table;

  .col {
    align-items: center;
    display: flex;

    &:not(.heading) {
      @extend %tbody-cell;

      height: auto;
      min-height: $tbody-cell-height;
      padding-right: 0;

      .btn {
        @extend %btn-footer;
      }
    }

    &.heading {
      @extend %thead-cell;

      height: auto;
      min-height: $thead-cell-height;
      text-align: left;
    }
  }

  .heading-container {
    background-color: transparent;
    display: flex;
  }
}

.screened-ip-address-form {
  float: left;
  margin-right: $spacer-lg;
  margin-bottom: $spacer-lg;
  margin-left: 0;
}

.settings {
  @extend %card;

  margin: 0;

  .setting {
    @extend %card-block;

    align-items: flex-start;
    border-bottom: 1px solid color-chooser($white-divider, $black-divider);
    display: flex;
    flex-wrap: wrap;

    &:last-child {
      border-bottom: 0;
      margin-bottom: 0;
    }

    &.category-list {
      box-shadow: none;
      margin-bottom: 0;
    }

    h3 {
      @extend %typography-h6;
    }

    .ac-wrap {
      margin-bottom: $card-inner-spacer-x;
      width: auto !important;

      input[type='text'] {
        @extend %text-field-box;
      }
    }

    .desc,
    .validation-error {
      @extend %typography-caption;

      padding-top: 0;
    }

    .input-setting-list {
      background-color: transparent;
      border: 0;
      box-shadow: none;
      padding: 0;
    }

    .input-setting-string {
      @extend %text-field-box;
    }

    .setting-label {
      margin-right: 0;
      width: 100%;
    }

    .setting-value {
      flex-grow: 1;
      margin-right: $card-inner-spacer-x;
      padding-right: 0;
      width: 0;

      &:last-child {
        margin-right: 0;
        width: 100%;
      }

      label {
        font-weight: normal;

        &:last-child {
          margin-bottom: 0;
        }
      }

      + .btn {
        margin-left: auto;
      }

      .select2-container {
        margin-bottom: $card-inner-spacer-x;
        width: auto !important;
      }

      .select2-container-multi {
        &.select2-container-active .select2-choices {
          border-bottom: ($text-field-border-width * 2) solid unquote('$tertiary');
        }

        .select2-choices {
          border-bottom: $text-field-border-width solid color-chooser($text-field-border-color-dark, $text-field-border-color-light);

          @include focus-hover {
            border-width: ($text-field-border-width * 2);
          }
        }
      }
    }
  }
}

.site-texts {
  @extend %card;
  @extend %card-block;

  .search-area {
    margin-bottom: $card-inner-spacer-y;

    .site-text-search {
      @extend %text-field-box;
    }
  }

  .site-text {
    border-bottom: 0;
    margin-bottom: $card-inner-spacer-y;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.sp-replacer {
  min-width: 49px;
}

.staff-action-logs-controls,
.staff-action-logs-instructions {
  clear: both;
  margin: 0 0 $spacer-lg;
}

.value-list {
  input[type='text'] {
    @extend %text-field-box;

    flex-grow: 1;
    margin-bottom: 0;
    width: auto;
  }

  .input {
    align-items: center;
    display: flex;
    margin-bottom: $card-inner-spacer-x;
  }

  .placeholder {
    border: 0;
    margin: 0;
    padding: 0;
  }

  .value {
    @extend %text-field;
    @extend %text-field-box;

    margin-bottom: 1px;

    .btn {
      background-color: transparent;
      padding: 0;
    }
  }

  .values {
    margin-bottom: $card-inner-spacer-x;
  }
}

.version-check {
  .face {
    width: $material-icon-size;
  }

  .version-number {
    font-size: inherit;
    font-weight: bolder;
  }
}

